--- a/styles.css
+++ b/styles.css
@@ -92,18 +92,18 @@
 }
 .choose {
     border: 2px solid white;
-    height: 30px;
+    /* height: 30px; */
     border-radius: 15px;
     display: flex;
     justify-content: center;
     background-color: var(--primary-color);
     cursor: pointer;
+    padding: 0 10px 0;
 }
 .choice-text {
     color: white;
     width: 100%;
     margin : 5px auto;
-    ;
 }
 
 .footer {
@@ -242,8 +242,8 @@ button:hover {
     .container {
         background-image:linear-gradient(to bottom, rgba(22, 152, 217, 0.52), rgba(117, 19, 93, 0.73)),
         url('assets/images/background-image.png');
-        height: 93vh;
-        max-height: 500px;
+        height: auto;
+        max-height: 900px;
         width: 80vw;
         position: relative;
         left: 10%;
